fix: 데이터베이스 모드 활성화로 AI 요약 에러 해결
- package.json: tsx에 --env-file 옵션 추가
- .env.local: USE_DATABASE=true 추가 (로컬 전용)
- Vercel 환경 변수: USE_DATABASE=true 추가됨

이제 AI 요약 기능이 정상 작동합니다.

--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "build": "prisma migrate deploy && prisma generate && next build",
     "start": "next start",
     "lint": "next lint",
-    "collect": "tsx scripts/collect-rss.ts",
-    "collect:watch": "tsx scripts/collect-rss.ts --watch"
+    "collect": "tsx --env-file=.env.local scripts/collect-rss.ts",
+    "collect:watch": "tsx --env-file=.env.local scripts/collect-rss.ts --watch"
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
