feat: 네이버 금융 실시간 경제지표 스크래핑 구현
- cheerio 라이브러리로 네이버 금융 스크래핑
- KOSPI/KOSDAQ 국내 지수 실시간 수집
- USD/JPY/EUR/CNY 환율 정보 실시간 수집
- S&P500/NASDAQ/Dow/Nikkei 해외 지수 실시간 수집
- 국제 금시세 실시간 수집
- 5분 캐싱으로 네이버 서버 부하 최소화
- 모든 지표 병렬 스크래핑으로 성능 최적화
- cheerio 타입 호환성 수정 (newsContent.ts)
- .gitignore에 .env.production 추가

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "rss-parser": "^3.13.0"
   },
   "devDependencies": {
+    "@types/cheerio": "^0.22.35",
     "@types/he": "^1.2.3",
     "@types/node": "^20",
     "@types/node-cron": "^3.0.11",
