--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "groq-sdk": "^0.37.0",
     "he": "^1.2.0",
     "next": "^16.1.2",
+    "next-themes": "^0.4.6",
     "node-cron": "^3.0.3",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
