--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "node-cron": "^3.0.3",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
+    "react-swipeable": "^7.0.2",
     "rss-parser": "^3.13.0"
   },
   "devDependencies": {
